k8s/base/apps/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-nginx
  labels:
    app: backend-nginx
spec:
  selector:
    matchLabels:
      app: backend-nginx
      tier: backend-nginx
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend-nginx
        tier: backend-nginx
    spec:
      containers:
        - image: null
          name: backend-nginx
          resources:
            requests:
              cpu: "50m"
            limits:
              cpu: "100m"
          ports:
            - containerPort: 80
          command:
            [
              "sh",
              "-c",
              "sed -i '2s/php/$(UPSTREAM_ADMIN)/' /etc/nginx/conf.d/default.conf; exec nginx -g 'daemon off;'",
            ]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-php
  labels:
    app: backend-php
spec:
  selector:
    matchLabels:
      app: backend-php
      tier: backend-php
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend-php
        tier: backend-php
    spec:
      volumes:
        - name: yii-runtime
          persistentVolumeClaim:
            claimName: null
      containers:
        - image: null
          name: backend-php
          resources:
            requests:
              cpu: "50m"
            limits:
              cpu: "100m"
          volumeMounts:
            - name: yii-runtime
              mountPath: /var/www/html/runtime
